--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>net.codesup.utilities</groupId>
 	<artifactId>base-n-codec</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>Arbitrary radix octet encoder</name>
 	<packaging>jar</packaging>
@@ -21,7 +20,8 @@
 		<connection>scm:git:https://github.com/mklemm/base-n-codec-java.git</connection>
 		<developerConnection>scm:git:https://github.com/mklemm/base-n-codec-java.git</developerConnection>
 		<url>http://mklemm.github.io/base-n-codec</url>
-	</scm>
+	  <tag>base-n-codec-1.0.0</tag>
+  </scm>
 
 	<licenses>
 		<license>
