--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>net.codesup.utilities</groupId>
 	<artifactId>base-n-codec</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<name>Arbitrary radix octet encoder</name>
 	<packaging>jar</packaging>
@@ -20,7 +20,7 @@
 		<connection>scm:git:https://github.com/mklemm/base-n-codec-java.git</connection>
 		<developerConnection>scm:git:https://github.com/mklemm/base-n-codec-java.git</developerConnection>
 		<url>http://mklemm.github.io/base-n-codec</url>
-	  <tag>base-n-codec-1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<licenses>
